--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 0 15px 62px;
+  padding: 0 0 0 62px;
 }
 .nav__list {
   display: flex;
@@ -46,4 +46,14 @@
 }
 .nav__button-link:hover {
   background-color: var(--hover);
+}
+@media (max-width: 1024px) {
+  .nav {
+    background-color: var(--bg);
+    border-radius: 82px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0 0 30px;
+  }
 }
