--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -31,8 +31,7 @@
   bottom: -11px;
   transition: all 0.2s ease-in-out;
 }
-.nav__button-wrapper {
-}
+
 .nav__button-link {
   display: block;
   border-radius: 50px 100px 100px 50px;
@@ -47,6 +46,36 @@
 .nav__button-link:hover {
   background-color: var(--hover);
 }
+.header__mobile {
+  padding: 13px 5px;
+  position: relative;
+  z-index: 3;
+  width: 50px;
+  height: 50px;
+  background-color: var(--bg);
+  cursor: pointer;
+}
+.header__mobile span {
+  transition: all 0.2s ease-in-out;
+  display: block;
+  height: 3px;
+  width: 100%;
+  margin-bottom: 7px;
+  background-color: var(--text);
+  border-radius: 13px;
+  position: relative;
+}
+.header__mobile.active span:first-child {
+  transform: rotate(45deg);
+  top: 10px;
+}
+.header__mobile.active span:nth-child(2) {
+  opacity: 0;
+}
+.header__mobile.active span:last-child {
+  transform: rotate(-45deg);
+  top: -10px;
+}
 @media (max-width: 1024px) {
   .nav {
     background-color: var(--bg);
@@ -55,5 +84,86 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 0 0 30px;
+  }
+}
+@media (max-width: 991px) {
+  .backdrop.backdrop-active {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+  }
+  .nav {
+    position: absolute;
+    transition: all 0.2s ease-in-out;
+    top: 15px;
+    right: 0;
+    height: 97vh;
+    border-radius: 20px 0 0 20px;
+    z-index: 2;
+    padding: 30px 30px;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 0;
+    overflow: hidden;
+    visibility: hidden;
+  }
+  .nav.nav-active {
+    width: 75vw;
+    visibility: visible;
+  }
+  .nav__logo-mob {
+    width: 200px;
+    height: 87px;
+  }
+  .nav__logo-mob svg {
+    width: 100%;
+    height: 100%;
+  }
+  .nav__logo {
+    width: 200px;
+    height: 100px;
+    margin-bottom: 30px;
+  }
+  .nav__logo svg {
+    width: 100%;
+    height: 100%;
+  }
+  .nav__list {
+    flex-direction: column;
+    gap: 50px;
+    margin-bottom: 50px;
+    text-align: center;
+  }
+  .nav__link {
+    font-weight: 500;
+    font-size: 24px;
+    position: relative;
+  }
+  .nav__link::after {
+    display: none;
+  }
+  .nav__button-wrapper {
+    width: 100%;
+  }
+  .nav__button-link {
+    border-radius: 30px;
+    font-size: 24px;
+    padding: 30px 10px;
+    width: 100%;
+    text-align: center;
+  }
+  .header__nav-mobile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 50px;
+  }
+}
+@media (max-width: 650px) {
+  .nav.nav-active {
+    width: calc(100vw - 15px);
   }
 }
