--- a/src/components/Start/start.css
+++ b/src/components/Start/start.css
@@ -1,5 +1,5 @@
 .start {
-  margin: 80px 0;
+  margin: 80px 0 0;
 }
 .start__wrapper {
   border-radius: 80px;
@@ -18,8 +18,8 @@
 }
 .start__title {
   font-weight: 500;
-  /* 175-48 */
-  font-size: clamp(3rem, 1.412rem + 7.94vw, 10.938rem);
+  /* 175-40 */
+  font-size: clamp(2.5rem, 0.813rem + 8.44vw, 10.938rem);
   line-height: 1;
   letter-spacing: -0.02em;
   margin-bottom: 75px;
@@ -101,7 +101,7 @@
 }
 @media (max-width: 1440px) {
   .start {
-    margin: 60px 0 30px;
+    margin: 60px 0 0;
   }
   .start__wrapper {
     border-radius: 60px;
@@ -164,5 +164,51 @@
   .footer {
     border-radius: 38px;
     padding: 30px 30px;
+  }
+}
+@media (max-width: 991px) {
+  .footer {
+    border-radius: 30px;
+    padding: 47px 90px;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .footer__list {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+@media (max-width: 768px) {
+  .start__wrapper {
+    border-radius: 30px;
+    padding: 50px 30px;
+  }
+}
+@media (max-width: 550px) {
+  .start {
+    margin: 30px 0 0;
+  }
+  .start__wrapper {
+    border-radius: 30px;
+    padding: 35px 20px 20px;
+  }
+  .start__title {
+    margin-bottom: 25px;
+  }
+  .start__btn {
+    border-radius: 20px;
+  }
+  .start__btn-link {
+    padding: 15px 50px;
+  }
+  .start__flex {
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+  .footer {
+    border-radius: 30px;
+    padding: 30px 10px;
+    flex-direction: column;
+    gap: 30px;
   }
 }
