--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -52,7 +52,7 @@
   z-index: 3;
   width: 50px;
   height: 50px;
-  background-color: var(--bg);
+  background-color: transparent;
   cursor: pointer;
 }
 .header__mobile span {
