--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -6,6 +6,7 @@
   align-items: center;
   padding: 0 0 0 62px;
 }
+
 .nav__list {
   display: flex;
   gap: 50px;
@@ -14,10 +15,11 @@
   font-weight: 500;
   font-size: 18px;
   line-height: 1.33333;
-  color: var(--text);
+  color: var(--logo-dark-blue);
   transition: all 0.2s ease-in-out;
   position: relative;
 }
+
 .nav__link-active::after {
   display: block;
   background-color: #141313;
@@ -31,7 +33,10 @@
   bottom: -11px;
   transition: all 0.2s ease-in-out;
 }
-
+body[data-theme="medium"] .nav__link-active::after,
+body[data-theme="dark"] .nav__link-active::after {
+  background-color: var(--white);
+}
 .nav__button-link {
   display: block;
   border-radius: 50px 100px 100px 50px;
@@ -42,6 +47,10 @@
   background-color: var(--text);
   padding: 34px 43px 33px 33px;
   transition: all 0.2s ease-in-out;
+}
+body[data-theme="medium"] .nav__button-link,
+body[data-theme="dark"] .nav__button-link {
+  background-color: var(--white);
 }
 .nav__button-link:hover {
   background-color: var(--hover);
@@ -61,7 +70,7 @@
   height: 3px;
   width: 100%;
   margin-bottom: 7px;
-  background-color: var(--text);
+  background-color: var(--logo-dark-blue);
   border-radius: 13px;
   position: relative;
 }
@@ -76,9 +85,14 @@
   transform: rotate(-45deg);
   top: -10px;
 }
+@media (min-width: 992px) {
+  body[data-theme="medium"] .nav,
+  body[data-theme="dark"] .nav {
+    background-color: var(--dark-blue-opacity);
+  }
+}
 @media (max-width: 1024px) {
   .nav {
-    background-color: var(--bg);
     border-radius: 82px;
     display: flex;
     justify-content: space-between;
@@ -96,6 +110,7 @@
     height: 100vh;
   }
   .nav {
+    background-color: var(--bg-page);
     position: absolute;
     transition: all 0.2s ease-in-out;
     top: 15px;
@@ -111,6 +126,7 @@
     visibility: hidden;
   }
   .nav.nav-active {
+    background-color: var(--bg-page);
     width: 75vw;
     visibility: visible;
   }
@@ -165,5 +181,52 @@
 @media (max-width: 650px) {
   .nav.nav-active {
     width: calc(100vw - 15px);
+  }
+  .nav__button-link {
+    border-radius: 23px;
+    font-size: 24px;
+    padding: 18px 10px;
+    width: 100%;
+    text-align: center;
+  }
+  .nav {
+    align-items: flex-start;
+  }
+}
+@media (max-width: 400px) {
+  .nav__logo-mob {
+    width: 157px;
+    height: 66px;
+    margin-bottom: 0;
+  }
+  .nav {
+    padding: 20px 30px;
+    align-items: flex-start;
+  }
+  .nav__logo {
+    width: 157px;
+    height: 66px;
+    margin-bottom: 25px;
+  }
+  .nav__list {
+    text-align: left;
+    gap: 26px;
+    margin-bottom: 30px;
+  }
+  .header__mobile {
+    padding: 9px 0px;
+    width: 40px;
+    height: 40px;
+  }
+  .header__mobile span {
+    margin-bottom: 6px;
+  }
+  .nav__button-link {
+    border-radius: 12px;
+    font-size: 21px;
+    padding: 13px 10px;
+  }
+  .header__mobile.active span:last-child {
+    top: -8px;
   }
 }
