--- a/src/components/Button/button.css
+++ b/src/components/Button/button.css
@@ -6,9 +6,14 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33333;
-  color: var(--bg-page);
+  color: var(--white);
   transition: all 0.2s ease-in-out;
   cursor: pointer;
+}
+
+body[data-theme="dark"] .button {
+  color: var(--dark-blue-bg);
+  background-color: var(--white);
 }
 .button:hover {
   background-color: var(--hover);
@@ -18,7 +23,6 @@
     width: 100%;
     padding: 15px 50px;
     border-radius: 20px;
-
     font-size: 18px;
     line-height: 1.33333;
     color: var(--bg-page);
